fix(Field): fix label-align top not work when set label-width (#11611)
* fix(Field): fix Field label-align

* style: delete some redundant css

* style: delete some redundant css

--- a/packages/vant/src/field/index.less
+++ b/packages/vant/src/field/index.less
@@ -23,6 +23,15 @@
 .van-field {
   flex-wrap: wrap;
 
+  &--label {
+    &-top {
+      .van-field__value {
+        flex: none;
+        width: 100%;
+      }
+    }
+  }
+
   &__label {
     flex: none;
     box-sizing: border-box;
@@ -41,9 +50,6 @@
     }
 
     &--top {
-      display: flex;
-      width: 100%;
-      text-align: left;
       margin-bottom: var(--van-padding-base);
     }
 
